module(
    name = "robinhood_trader",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "1.4.1")

# ── Python toolchain ──────────────────────────────────────────────────────
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
    is_default = True,
)

# ── PyPI dependencies ─────────────────────────────────────────────────────
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//:requirements.lock",
)
use_repo(pip, "pip")
