[project]
name = "robinhood-trader"
version = "0.1.0"
description = "RSI mean-reversion trading bot for Robinhood Agentic"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pytz>=2024.1",
    "aiohttp>=3.9.5",
]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "keyring>=25.0.0",
    "diagrams>=0.23.0",
    "playwright>=1.60.0",
    "bandit>=1.7.5",

    "checkov>=3.2.0",
    "pip-audit>=2.7.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "anyio>=4.0.0",
    "ruff>=0.9.0",
]


[tool.hatch.build.targets.wheel]
packages = ["broker", "strategy", "risk", "db", "tax", "vault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# E402/I001: pre-existing pattern — from __future__ placed before module docstring across all files
ignore = ["E501", "E402", "I001"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
