[project]
name = "robinhood-trader"
version = "0.1.0"
description = "RSI mean-reversion trading bot for Robinhood Agentic"
requires-python = ">=3.13"
dependencies = [
    # Pinned to uv.lock versions using compatible-release (~=).
    # Update via: uv sync --all-groups && uv run inv lock-update
    "httpx~=0.28.1",
    "pandas~=3.0.3",
    "sqlalchemy~=2.0.51",
    "psycopg2-binary~=2.9.12",
    "pyyaml~=6.0.3",
    "streamlit~=1.58.0",
    "plotly~=6.8.0",
    "pytz~=2026.2",
    "aiohttp~=3.14.1",
]

[dependency-groups]
dev = [
    "invoke~=3.0.3",
    "keyring~=25.7.0",
    "diagrams~=0.25.1",
    "playwright~=1.60.0",
    "bandit~=1.7.5",
    "truffleHog~=3.63.0",
    "checkov~=3.2.0",
]

test = [
    "pytest~=9.1.1",
    "pytest-cov~=7.1.0",
    "pytest-asyncio~=1.4.0",
    "anyio~=4.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["broker", "strategy", "risk", "db", "tax", "vault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
